# cybercat

./: .gitignore  README.md  pyproject.toml
ArduinoVideoSerial/: ArduinoVideoSerial.ino
cybercat/: __main__.py  scene_interface.py  scene_manager.py
cybercat/fft/: stream_analyzer.py  stream_reader_pyaudio.py  stream_reader_sounddevice.py  visualizer.py
cybercat/scenes/: __init__.py  blank_scene.py  fft_scene.py  media_scene.py  rainbow_scene.py
